--- a/jokestan/package.json
+++ b/jokestan/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "live-server": "0.17.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
