Add command for start api sentences

--- a/jokestan/package.json
+++ b/jokestan/package.json
@@ -26,7 +26,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server":"node ./src/server"
+    "server": "node ./src/server",
+    "jsonSentence": "cd ./src/sentenes && json-server  word.json --p 1010 "
   },
   "eslintConfig": {
     "extends": [
